--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
   <title>Frontend Mentor | Loopstudios landing page</title>
 
-  <link rel="stylesheet" href="main.min.css">
-  <script src="/script_ui.js" defer></script>
+  <link rel="stylesheet" href="./main.min.css">
+  <script src="./script_ui.js" defer></script>
 </head>
 
 <body>
   <div class="hero">
     <header>
-      <img src="/images/logo.svg" alt="Logo">
+      <img src="./images/logo.svg" alt="Logo">
 
-      <button class="btn" id="navBtn"><img src="/images/icon-hamburger.svg" alt="icon-hamburger"></button>
+      <button class="btn" id="navBtn"><img src="./images/icon-hamburger.svg" alt="icon-hamburger"></button>
 
       <nav>
         <a href="#">About</a>
@@ -37,7 +37,7 @@
 
   <main>
     <section class="interactive">
-      <img src="/images/desktop/image-interactive.jpg" alt="interactive">
+      <img src="./images/desktop/image-interactive.jpg" alt="interactive">
       <div class="content">
         <h1>The leader in interactive VR</h1>
         <p>Founded in 2011, Loopstudios has been producing world-class virtual reality
@@ -89,7 +89,7 @@
   <footer>
 
     <div class="left">
-      <img src="/images/logo.svg" alt="Logo">
+      <img src="./images/logo.svg" alt="Logo">
 
       <nav>
         <a href="#">About</a>
@@ -103,19 +103,19 @@
     <div class="right">
       <div class="socials">
         <div class="icon">
-          <img src="/images/icon-facebook.svg" alt="icon-facebook">
+          <img src="./images/icon-facebook.svg" alt="icon-facebook">
         </div>
 
         <div class="icon">
-          <img src="/images/icon-twitter.svg" alt="icon-twitter">
+          <img src="./images/icon-twitter.svg" alt="icon-twitter">
         </div>
 
         <div class="icon">
-          <img src="/images/icon-pinterest.svg" alt="icon-pinterest">
+          <img src="./images/icon-pinterest.svg" alt="icon-pinterest">
         </div>
 
         <div class="icon">
-          <img src="/images/icon-instagram.svg" alt="icon-instagram">
+          <img src="./images/icon-instagram.svg" alt="icon-instagram">
         </div>
       </div>
 
