added font-family and link to github repo

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">The Yellow May</a>.
+    Coded by <a href="https://github.com/Yellow-May" target="_blank">The Yellow May</a>.
   </div>
 </body>
 
